@@ -2,6 +2,10 @@
 
 2007-11-22	Konstantin V. Arkhipov
 
+	* ext/src/core/Base/: Ternary implemented.
+
+2007-11-21	Konstantin V. Arkhipov
+
 	* main/Utils/FullTextUtils.class.php: ObjectQuery replaced by
 	Criteria.
 
